tests/test108.rael.exp
helo
Error [3:5]: ';' has to be inside a loop
|     ;
|     ^
